...
        android:layout_marginLeft="365dp"
        android:layout_marginTop="40dp"
        android:onClick="showsettings"
        app:srcCompat="@drawable/ic_baseline_more_vert_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:onClick="showPopup"
        app:backgroundTint="#5ABDBD"
        app:maxImageSize="44dp"
...
        app:srcCompat="@drawable/ic_baseline_add_48"
        android:translationZ="12dp"

        />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="60dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|right"
        android:layout_marginLeft="335dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#00FFFDFD"
...
