<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
    xmlns:tools="http://schemas.android.com/tools"
    -->

    <item
        android:id="@+id/item1"
        android:title="Codigo de barras" />

    <item
        android:id="@+id/item2"
        android:title="Codigo nacional" />

</menu>