...
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/title_cn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/corp3"
                    android:onClick="createNoteFromCN"
                    android:text="@string/confirm" />
...
