...
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nombre_medicamento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical"
                        android:text="Nombre"
                        android:textSize="20dp"
...
